adjust login
