# public/swagger.json
@@ -43,11 +43,15 @@
 			}
 		},
 		"securitySchemes": {
-			"tsoa_auth": {
-				"type": "http",
-				"scheme": "basic",
-				"description": "Basic Authentication",
-				"authorizationUrl": "http://localhost:3000/login"
+			"jwt": {
+				"type": "apiKey",
+				"in": "cookie",
+				"name": "token"
+			},
+			"headerjwt": {
+				"type": "apiKey",
+				"in": "header",
+				"name": "x-access-token"
 			}
 		}
 	},
@@ -141,7 +145,7 @@
 				},
 				"security": [
 					{
-						"jwt": [
+						"headerjwt": [
 							"admin"
 						]
 					}
